--- a/template.yml
+++ b/template.yml
@@ -316,4 +316,7 @@ Resources:
             RestApiId: !Ref BacklogGitApi
             Path: /
             Method: POST
-
+OutPuts:
+  WebhookApiEndpoint:
+    Description: "Webhook Api Endpoint"
+    Value: !Sub "https://${BacklogGitApi}.execute-api.${AWS::Region}.amazonaws.com/api/"
